[XForms] NPOTDB [1.1] Implement XPath function digest(). Bug 426671, p=msterlin r=olli+aaronr